--- a/templates/baseen2.html
+++ b/templates/baseen2.html
@@ -22,12 +22,14 @@
 	<link rel="stylesheet" href="{% static "plugins/bootstrap/css/bootstrap.min.css"%}">
 	<link rel="stylesheet" href="{% static "css/app.css"%}">
 	<link rel="stylesheet" href="{% static "css/blocks.css"%}">
+	<link rel="stylesheet" href="{% static "css/style.css"%}">
 
 	<!-- CSS Implementing Plugins -->
 	<link rel="stylesheet" href="{% static "plugins/animate.css"%}">
 	<link rel="stylesheet" href="{% static "plugins/line-icons/line-icons.css"%}">
 	<link rel="stylesheet" href="{% static "plugins/font-awesome/css/font-awesome.min.css"%}">
 	<link rel="stylesheet" href="{% static "plugins/sky-forms-pro/skyforms/css/sky-forms.css"%}">
+	<link rel="stylesheet" href="{% static "plugins/sky-forms-pro/skyforms/custom/custom-sky-forms.css"%}">
 	<link rel="stylesheet" href="{% static "plugins/owl-carousel2/static/owl.carousel.css"%}">
 	<link rel="stylesheet" href="{% static "plugins/cube-portfolio/cubeportfolio/css/cubeportfolio.min.css"%}">
 	<link rel="stylesheet" href="{% static "plugins/master-slider/masterslider/style/masterslider.css"%}">
@@ -36,6 +38,8 @@
 
 	<!-- CSS Theme -->
 	<link rel="stylesheet" href="{% static "css/travel.style.css"%}">
+	<link rel="stylesheet" href="{% static "css/theme-colors/default.css"%}" id="style_color">
+	<link rel="stylesheet" href="{% static "css/theme-skins/dark.css"%}">
 
 	<!-- CSS Customization -->
 	<link rel="stylesheet" href="{% static "css/custom.css"%}">
