--- a/templates/homeen2.html
+++ b/templates/homeen2.html
@@ -33,7 +33,7 @@
 							<a href="/balkan-tours"><span data-hover="Balkan Tours">BALKAN TURLARI</span></a>
 						</li>
 						<li class="page-scroll">
-							<a href="/alternatives"><span data-hover="Alternatives">ALTERNATIV TURLAR</span></a>
+							<a href="/alternatives"><span data-hover="Alternatives">ALTERNATIF TURLAR</span></a>
 						</li>
 						<li class="page-scroll">
 							<a href="/cities"><span data-hover="Cities">ŞEHİRLER</span></a>
