--- a/templates/bosniatours.html
+++ b/templates/bosniatours.html
@@ -500,7 +500,7 @@
 						<h3 align="center">İSTEĞE BAĞLI TURLAR</h3>
 					</div>
 					<div>
-						<form action="#" class="sky-form">
+						<form action="#" class="sky-form" style="border-color:orange">
 							<fieldset>
 								<section>
 									<label class="label">Bosna Hersek'te gezmek istediğiniz yerleri siz belirleyebilirsiniz. Gezilerimizde hangi şehirde nerelerin gezileceği bilgisini aşağıda bulabilirsiniz.</label>
