--- a/templates/alternatives.html
+++ b/templates/alternatives.html
@@ -55,7 +55,7 @@
 						<!-- Home -->
 						<li class="headline">
 							<a href="/bosnia-tours">
-								BOSNIA TOURS
+								BOSNA TURLARI
 							</a>
 						</li>
 						<!-- End Home -->
@@ -63,47 +63,39 @@
 						<!-- Pages -->
 						<li class="headline">
 							<a href="/balkan-tours" >
-								BALKAN TOURS
+								BALKAN TURLARI
 							</a>
 						</li>
 						<!-- End Pages -->
 
-						<!-- Blog -->
-						<li class="headline">
-							<a href="/eu-tours">
-								EU TOURS
-							</a>
-						</li>
-						<!-- End Blog -->
-
 						<!-- Portfolio -->
 						<li class="headline active">
 							<a href="/alternatives" >
-								ALTERNATIVES
+								ALTERNATİF TURLAR
 							</a>
 						</li>
 						<!-- End Portfolio -->
 
-						<!-- Features -->
-						<li class="headline">
-							<a href="/rentacar">
-								RENT A CAR
-							</a>
-						</li>
-						<!-- End Features -->
-
 						<!-- Cities -->
 						<li class="headline">
 							<a href="/cities">
-								CITIES
+								ŞEHİRLER
 							</a>
 						</li>
 						<!-- End Cities -->
 
+						<!-- Features -->
+						<li class="headline">
+							<a href="/rentacar">
+								ARAÇ KİRALAMA
+							</a>
+						</li>
+						<!-- End Features -->
+
 						<!-- Contact -->
 						<li class="headline">
 							<a href="/contact">
-								CONTACT
+								İLETİŞİM
 							</a>
 						</li>
 						<!-- End Contact -->
@@ -118,10 +110,10 @@
 		<!--=== Breadcrumbs ===-->
 		<div class="breadcrumbs">
 			<div class="container">
-				<h1 class="pull-left">AlTERNATIVES</h1>
+				<h1 class="pull-left">ALTERNATİF TURLAR</h1>
 				<ul class="pull-right breadcrumb">
-					<li><a href="/">Home</a></li>
-					<li class="active">Alternatives</li>
+					<li><a href="/">Ana Sayfa</a></li>
+					<li class="active">Alternatif Turlar</li>
 				</ul>
 			</div>
 		</div><!--/breadcrumbs-->
@@ -130,36 +122,140 @@
 		<!--=== Content Part ===-->
 		<div class="container content">
 			<div class="row blog-page">
+					<!--Inversed and Rounded Buttons-->
+					<div class="row brand-page margin-bottom-40">
+						<div class="col-sm-6 col-md-3">
+							<a href="#fishing">
+								<button class="btn btn-block btn-html5-inversed rounded" >Balıkcılık</button>
+							</a>
+						</div>
+						<div class="col-sm-6 col-md-3">
+							<a href="#camping">
+							<button class="btn btn-block btn-html5-inversed rounded">Orman Kampı
+							</button>
+							</a>
+						</div>
+						<div class="col-sm-6 col-md-3">
+							<a href="#parachute">
+							<button class="btn btn-block btn-html5-inversed rounded">Yamaç Paraşütü
+							</button>
+							</a>
+						</div>
+						<div class="col-sm-6 col-md-3">
+							<a href="#tracking">
+							<button class="btn btn-block btn-html5-inversed rounded">Treking
+							</button>
+							</a>
+						</div>
+						<div class="col-sm-6 col-md-3">
+							<a href="#mountainhotel">
+							<button class="btn btn-block btn-html5-inversed rounded">Dağ Oteli
+							</button>
+							</a>
+						</div>
+						<div class="col-sm-6 col-md-3">
+							<a href="#cave">
+							<button class="btn btn-block btn-html5-inversed rounded">Mağara Gezisi
+							</button>
+							</a>
+						</div>
+						<div class="col-sm-6 col-md-3">
+							<a href="#horsebackriding">
+							<button class="btn btn-block btn-html5-inversed rounded">At Binicilik
+							</button>
+						</div>
+						<div class="col-sm-6 col-md-3">
+							<a href="#pyramit">
+							<button class="btn btn-block btn-html5-inversed rounded">Piramitler
+							</button>
+							</a>
+						</div>
+						<div class="col-sm-6 col-md-3">
+							<a href="#iceskating">
+							<button class="btn btn-block btn-html5-inversed rounded">Buz Pateni
+							</button>
+							</a>
+						</div>
+						<div class="col-sm-6 col-md-3">
+							<a href="#skiing">
+							<button class="btn btn-block btn-html5-inversed rounded">Kayak
+							</button>
+							</a>
+						</div>
+						<div class="col-sm-6 col-md-3">
+							<a href="#rafting">
+							<button class="btn btn-block btn-html5-inversed rounded">Rafting
+							</button>
+							</a>
+						</div>
+						<div class="col-sm-6 col-md-3">
+							<a href="#titosbanker">
+							<button class="btn btn-block btn-html5-inversed rounded">Tito'nun Sığınağı
+							</button>
+							</a>
+						</div>
+						<div class="col-sm-6 col-md-3">
+							<a href="#donkey">
+							<button class="btn btn-block btn-html5-inversed rounded">Eşek Çiftliği
+							</button>
+							</a>
+						</div>
+						<div class="col-sm-6 col-md-3">
+							<a href="#sosvillage">
+							<button class="btn btn-block btn-html5-inversed rounded">SOS Köyü
+							</button>
+							</a>
+						</div>
+						<div class="col-sm-6 col-md-3">
+							<a href="#termal">
+							<button class="btn btn-block btn-html5-inversed rounded">Kaplıca
+							</button>
+							</a>
+						</div>
+					</div>
+					<!--Inversed and Rounded Buttons-->
+
 				<!-- Left Sidebar -->
-				<div class="col-md-9 md-margin-bottom-40">
+				<div class="col-md-12 md-margin-bottom-40">
 					<!-- News v2 Gray -->
 					<div class="container content-md">
 						<div class="row news-v2">
 							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/v66.jpg"%}" alt="">
+								<div class="news-v2-badge" id="fishing">
+									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/balikcilik.jpg"%}" alt="">
 									<p>
-										<span>$ 30</span>
+										<span>€ 30</span>
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Corrupti Quos Dolores</a></h3>
-									<small>By Admin | <a class="color-inherit" href="#">16 Comments</a> | In <a href="#">Web Trends</a></small>
-									<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores.</p>
+									<h3><a href="#">Balıkçılık</a></h3>
+									<p>Balıkçılık</p>
 								</div>
 							</div>
 							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/v10.jpg"%}" alt="">
+								<div class="news-v2-badge" id="camping">
+									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/kamping.jpg"%}" alt="">
 									<p>
-										<span>$ 30</span>
+										<span>€ 30</span>
 										
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Blanditi Praesium Voluptum</a></h3>
-									<small>By Admin | <a class="color-inherit" href="#">51 Comments</a> | In <a href="#">Art &amp; Design</a></small>
-									<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores.</p>
+									<h3><a href="#">Orman kampı</a></h3>
+									<p>Orman Kampı</p>
+								</div>
+							</div>
+							<div class="col-md-4 sm-margin-bottom-30">
+								<div class="news-v2-badge" id="parachute">
+									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/yamacparasutu.jpg"%}" alt="">
+									<p>
+										<span>€ 30</span>
+
+									</p>
+								</div>
+								<div class="news-v2-desc bg-color-light">
+									<h3><a href="#">Yamaç Paraşütü</a></h3>
+									<p>Yamaç Paraşütü</p>
 								</div>
 							</div>
 						</div>
@@ -167,93 +263,167 @@
 
 						<div class="row news-v2">
 							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/v14.jpg"%}" alt="">
+								<div class="news-v2-badge" id="tracking">
+									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/treking.jpg"%}" alt="">
 									<p>
-										<span>$ 30</span>
-										<small>per day</small>
+										<span>€ 30</span>
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Corrupti Quos Dolores</a></h3>
-									<small>By Admin | <a class="color-inherit" href="#">16 Comments</a> | In <a href="#">Web Trends</a></small>
-									<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores.</p>
+									<h3><a href="#">Treking</a></h3>
+									<p>Treking</p>
 								</div>
 							</div>
 							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/v32.jpg"%}" alt="">
+								<div class="news-v2-badge" id="mountainhotel">
+									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/dagoteli.jpg"%}" alt="">
 									<p>
-										<span>$ 30</span>
-										<small>per day</small>
+										<span>€ 30</span>
+
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Blanditi Praesium Voluptum</a></h3>
-									<small>By Admin | <a class="color-inherit" href="#">51 Comments</a> | In <a href="#">Art &amp; Design</a></small>
-									<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores.</p>
-								</div>
-							</div>
-						</div>
-						<br>
-						<div class="row news-v2">
-							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/v3.jpg"%}" alt="">
-									<p>
-										<span>$ 30</span>
-										<small>per day</small>
-									</p>
-								</div>
-								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Corrupti Quos Dolores</a></h3>
-									<small>By Admin | <a class="color-inherit" href="#">16 Comments</a> | In <a href="#">Web Trends</a></small>
-									<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores.</p>
+									<h3><a href="#">Dağ Oteli</a></h3>
+									<p>Dağ Oteli </p>
 								</div>
 							</div>
 							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/v4.jpg"%}" alt="">
+								<div class="news-v2-badge" id="cave">
+									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/cave.jpg"%}" alt="">
 									<p>
-										<span>$ 30</span>
-										<small>per day</small>
+										<span>€ 30</span>
+
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Blanditi Praesium Voluptum</a></h3>
-									<small>By Admin | <a class="color-inherit" href="#">51 Comments</a> | In <a href="#">Art &amp; Design</a></small>
-									<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores.</p>
+									<h3><a href="#">Mağara Gezisi</a></h3>
+									<p>Mağara Gezisi </p>
 								</div>
 							</div>
 						</div>
 						<br>
 						<div class="row news-v2">
 							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/v7.jpg"%}" alt="">
+								<div class="news-v2-badge" id="horsebackriding">
+									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/atbinicilik.jpg"%}" alt="">
 									<p>
-										<span>$ 30</span>
-										<small>per day</small>
+										<span>€ 30</span>
+
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Corrupti Quos Dolores</a></h3>
-									<small>By Admin | <a class="color-inherit" href="#">16 Comments</a> | In <a href="#">Web Trends</a></small>
-									<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores.</p>
+									<h3><a href="#">At Binicilik</a></h3>
+									<p>At Binicilik </p>
 								</div>
 							</div>
 							<div class="col-md-4 sm-margin-bottom-30">
-								<div class="news-v2-badge">
-									<img class="img-responsive" src="{% static "img-temp/alternatives/v21.jpg"%}" alt="">
+								<div class="news-v2-badge" id="pyramit">
+									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/piramit.jpg"%}" alt="">
 									<p>
-										<span>$ 30</span>
-										<small>per day</small>
+										<span>€ 30</span>
+
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Blanditi Praesium Voluptum</a></h3>
-									<small>By Admin | <a class="color-inherit" href="#">51 Comments</a> | In <a href="#">Art &amp; Design</a></small>
-									<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores.</p>
+									<h3><a href="#">Piramitler</a></h3>
+									<p>Piramitler </p>
+								</div>
+							</div>
+							<div class="col-md-4 sm-margin-bottom-30">
+								<div class="news-v2-badge" id="iceskating">
+									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/buzpateni.jpg"%}" alt="">
+									<p>
+										<span>€ 30</span>
+
+									</p>
+								</div>
+								<div class="news-v2-desc bg-color-light">
+									<h3><a href="#">Buz Pateni</a></h3>
+									<p>Buz Pateni </p>
+								</div>
+							</div>
+						</div>
+						<br>
+						<div class="row news-v2">
+							<div class="col-md-4 sm-margin-bottom-30">
+								<div class="news-v2-badge" id="skiing">
+									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/kayak.jpg"%}" alt="">
+									<p>
+										<span>€ 30</span>
+
+									</p>
+								</div>
+								<div class="news-v2-desc bg-color-light">
+									<h3><a href="#">Kayak</a></h3>
+									<p>Kayak </p>
+								</div>
+							</div>
+							<div class="col-md-4 sm-margin-bottom-30">
+								<div class="news-v2-badge" id="rafting">
+									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/rafting.jpg"%}" alt="">
+									<p>
+										<span>€ 30</span>
+
+									</p>
+								</div>
+								<div class="news-v2-desc bg-color-light">
+									<h3><a href="#">Rafting</a></h3>
+									<p>Rafting </p>
+								</div>
+							</div>
+							<div class="col-md-4 sm-margin-bottom-30">
+								<div class="news-v2-badge" id="titosbanker">
+									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/titonunsiginagi.jpg"%}" alt="">
+									<p>
+										<span>€ 30</span>
+
+									</p>
+								</div>
+								<div class="news-v2-desc bg-color-light">
+									<h3><a href="#">Tito'nun Sığınağı</a></h3>
+									<p>Tito'nun Sığınağı </p>
+								</div>
+							</div>
+						</div>
+						<br>
+						<div class="row news-v2">
+							<div class="col-md-4 sm-margin-bottom-30">
+								<div class="news-v2-badge" id="donkey">
+									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/esekciftligi.jpg"%}" alt="">
+									<p>
+										<span>€ 30</span>
+
+									</p>
+								</div>
+								<div class="news-v2-desc bg-color-light">
+									<h3><a href="#">Eşek Çiftiği</a></h3>
+									<p>Eşek Çiftiği </p>
+								</div>
+							</div>
+							<div class="col-md-4 sm-margin-bottom-30">
+								<div class="news-v2-badge" id="sosvillage">
+									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/soskoyu.jpg"%}" alt="">
+									<p>
+										<span>€ 30</span>
+
+									</p>
+								</div>
+								<div class="news-v2-desc bg-color-light">
+									<h3><a href="#">SOS Köyü</a></h3>
+									<p>SOS Köyü </p>
+								</div>
+							</div>
+							<div class="col-md-4 sm-margin-bottom-30">
+								<div class="news-v2-badge" id="termal">
+									<img class="img-responsive" src="{% static "img-temp/alternatives/thumbs/kaplica.jpg"%}" alt="">
+									<p>
+										<span>€ 30</span>
+
+									</p>
+								</div>
+								<div class="news-v2-desc bg-color-light">
+									<h3><a href="#">Kaplıcalar</a></h3>
+									<p>Kaplıcalar </p>
 								</div>
 							</div>
 						</div>
@@ -262,73 +432,6 @@
 
 				</div>
 				<!-- End Left Sidebar -->
-
-				<!-- Right Sidebar -->
-				<div class="col-md-3">
-
-					<!-- Activities -->
-					<div class="posts margin-bottom-40">
-						<div class="headline headline-md"><h2>Activities</h2></div>
-						<dl class="dl-horizontal">
-							<dt><a href="#"><img src="{% static "img/sliders/elastislide/6.jpg"%}" alt="" /></a></dt>
-							<dd>
-								<p><a href="#"><b>Skiing</b><br>Bosnia has many world class ski resorts.</a></p>
-							</dd>
-						</dl>
-						<dl class="dl-horizontal">
-							<dt><a href="#"><img src="{% static "img/sliders/elastislide/6.jpg"%}" alt="" /></a></dt>
-							<dd>
-								<p><a href="#"><b>Rafting</b><br>Bosnia has many world class ski resorts.</a></p>
-							</dd>
-						</dl>
-						<dl class="dl-horizontal">
-							<dt><a href="#"><img src="{% static "img/sliders/elastislide/6.jpg"%}" alt="" /></a></dt>
-							<dd>
-								<p><a href="#"><b>Rent a Car</b><br>Bosnia has many world class ski resorts.</a></p>
-							</dd>
-						</dl>
-					</div>
-					<!-- End Activities -->
-
-					<!-- Tours -->
-					<div class="posts margin-bottom-40">
-						<div class="headline headline-md"><h2>Other Tours</h2></div>
-						<dl class="dl-horizontal">
-							<dt><a href="#"><img src="{% static "img/sliders/elastislide/6.jpg"%}" alt="" /></a></dt>
-							<dd>
-								<p><a href="#"><b>BOSNIA TOURS</b><br>Bosnia has many world class ski resorts.</a></p>
-							</dd>
-						</dl>
-						<dl class="dl-horizontal">
-							<dt><a href="#"><img src="{% static "img/sliders/elastislide/6.jpg"%}" alt="" /></a></dt>
-							<dd>
-								<p><a href="#"><b>TURKEY</b><br>Bosnia has many world class ski resorts.</a></p>
-							</dd>
-						</dl>
-						<dl class="dl-horizontal">
-							<dt><a href="#"><img src="{% static "img/sliders/elastislide/6.jpg"%}" alt="" /></a></dt>
-							<dd>
-								<p><a href="#"><b>EU</b><br>Bosnia has many world class ski resorts.</a></p>
-							</dd>
-						</dl>
-					</div>
-					<!-- End Tours -->
-
-					<!-- Photo Stream -->
-					<div class="headline headline-md"><h2>Photos</h2></div>
-					<ul class="list-unstyled blog-photos margin-bottom-30">
-						<li><a href="#"><img class="hover-effect" alt="" src="{% static "img/sliders/elastislide/5.jpg"%}"></a></li>
-						<li><a href="#"><img class="hover-effect" alt="" src="{% static "img/sliders/elastislide/6.jpg"%}"></a></li>
-						<li><a href="#"><img class="hover-effect" alt="" src="{% static "img/sliders/elastislide/8.jpg"%}"></a></li>
-						<li><a href="#"><img class="hover-effect" alt="" src="{% static "img/sliders/elastislide/10.jpg"%}"></a></li>
-						<li><a href="#"><img class="hover-effect" alt="" src="{% static "img/sliders/elastislide/11.jpg"%}"></a></li>
-						<li><a href="#"><img class="hover-effect" alt="" src="{% static "img/sliders/elastislide/1.jpg"%}"></a></li>
-						<li><a href="#"><img class="hover-effect" alt="" src="{% static "img/sliders/elastislide/2.jpg"%}"></a></li>
-						<li><a href="#"><img class="hover-effect" alt="" src="{% static "img/sliders/elastislide/7.jpg"%}"></a></li>
-					</ul>
-					<!-- End Photo Stream -->
-				</div>
-				<!-- End Right Sidebar -->
 			</div><!--/row-->
 		</div><!--/container-->
 		<!--=== End Content Part ===-->
