--- a/templates/balkantours.html
+++ b/templates/balkantours.html
@@ -63,7 +63,7 @@
 						<!-- Pages -->
 						<li class="headline active">
 							<a href="/balkan-tours" >
-								BALKAN TOURLARI
+								BALKAN TURLARI
 							</a>
 						</li>
 						<!-- End Pages -->
@@ -76,14 +76,6 @@
 						</li>
 						<!-- End Portfolio -->
 
-						<!-- Features -->
-						<li class="headline">
-							<a href="/rentacar">
-								ARAÇ KİRALAMA
-							</a>
-						</li>
-						<!-- End Features -->
-
 						<!-- Cities -->
 						<li class="headline">
 							<a href="/cities">
@@ -91,6 +83,14 @@
 							</a>
 						</li>
 						<!-- End Cities -->
+
+						<!-- Features -->
+						<li class="headline">
+							<a href="/rentacar">
+								ARAÇ KİRALAMA
+							</a>
+						</li>
+						<!-- End Features -->
 
 						<!-- Contact -->
 						<li class="headline">
