--- a/templates/baseen2.html
+++ b/templates/baseen2.html
@@ -35,6 +35,8 @@
 	<link rel="stylesheet" href="{% static "plugins/master-slider/masterslider/style/masterslider.css"%}">
 	<link rel="stylesheet" href="{% static "plugins/master-slider/u-styles/testimonials-1.css"%}">
 	<link rel="stylesheet" href="{% static "plugins/master-slider/u-styles/promo-1.css"%}">
+	<link rel="stylesheet" href="{% static "plugins/brand-buttons/brand-buttons.css"%}">
+	<link rel="stylesheet" href="{% static "plugins/brand-buttons/brand-buttons-inversed.css"%}">
 
 	<!-- CSS Theme -->
 	<link rel="stylesheet" href="{% static "css/travel.style.css"%}">
