--- a/templates/bosniatours.html
+++ b/templates/bosniatours.html
@@ -78,7 +78,7 @@
 
 						<!-- Home -->
 						<li class="headline">
-							<a href="/Cities">
+							<a href="/cities">
 								ŞEHİRLER
 							</a>
 						</li>
@@ -87,7 +87,7 @@
 						<!-- Features -->
 						<li class="headline">
 							<a href="/rentacar">
-								ARABA KİRALAMA
+								ARAÇ KİRALAMA
 							</a>
 						</li>
 						<!-- End Features -->
