--- a/templates/contact.html
+++ b/templates/contact.html
@@ -55,7 +55,7 @@
 						<!-- Home -->
 						<li class="headline">
 							<a href="/bosnia-tours">
-								BOSNIA TOURS
+								BOSNA TURLARI
 							</a>
 						</li>
 						<!-- End Home -->
@@ -63,47 +63,39 @@
 						<!-- Pages -->
 						<li class="headline">
 							<a href="/balkan-tours" >
-								BALKAN TOURS
+								BALKAN TURLARI
 							</a>
 						</li>
 						<!-- End Pages -->
 
-						<!-- Blog -->
-						<li class="headline">
-							<a href="/eu-tours">
-								EU TOURS
-							</a>
-						</li>
-						<!-- End Blog -->
-
 						<!-- Portfolio -->
 						<li class="headline">
 							<a href="/alternatives" >
-								ALTERNATIVES
+								ALTERNATİF TURLAR
 							</a>
 						</li>
 						<!-- End Portfolio -->
 
-						<!-- Features -->
-						<li class="headline">
-							<a href="/rentacar">
-								RENT A CAR
-							</a>
-						</li>
-						<!-- End Features -->
-
 						<!-- Cities -->
 						<li class="headline">
 							<a href="/cities">
-								CITIES
+								ŞEHİRLER
 							</a>
 						</li>
 						<!-- End Cities -->
 
+						<!-- Features -->
+						<li class="headline">
+							<a href="/rentacar">
+								ARAÇ KİRALAMA
+							</a>
+						</li>
+						<!-- End Features -->
+
 						<!-- Contact -->
 						<li class="headline active">
 							<a href="/contact">
-								CONTACT
+								İLETİŞİM
 							</a>
 						</li>
 						<!-- End Contact -->
@@ -118,10 +110,10 @@
 		<!--=== Breadcrumbs ===-->
 		<div class="breadcrumbs">
 			<div class="container">
-				<h1 class="pull-left">Our Contacts</h1>
+				<h1 class="pull-left">İLETİŞİM BİLGİLERİ</h1>
 				<ul class="pull-right breadcrumb">
-					<li><a href="/">Home</a></li>
-					<li class="active">Contacts</li>
+					<li><a href="/">Ana Sayfa</a></li>
+					<li class="active">İletişim</li>
 				</ul>
 			</div>
 		</div><!--/breadcrumbs-->
