--- a/templates/tourbaseen.html
+++ b/templates/tourbaseen.html
@@ -34,6 +34,8 @@
 	<link rel="stylesheet" href="{% static "plugins/owl-carousel/owl-carousel/owl.carousel.css"%}">
 	<link rel="stylesheet" href="{% static "plugins/sky-forms-pro/skyforms/css/sky-forms.css"%}">
 	<link rel="stylesheet" href="{% static "plugins/sky-forms-pro/skyforms/custom/custom-sky-forms.css"%}">
+	<link rel="stylesheet" href="{% static "plugins/brand-buttons/brand-buttons.css"%}">
+	<link rel="stylesheet" href="{% static "plugins/brand-buttons/brand-buttons-inversed.css"%}">
 	<!--[if lt IE 9]><link rel="stylesheet" href="{% static "plugins/sky-forms-pro/skyforms/css/sky-forms-ie8.css"%}"><![endif]-->
 
 	<!-- CSS Page Style -->
